Drop shadow updates

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -11,7 +11,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star orange v-tt"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg> <span class="mid-gray f6">Frequently accessed man pages</span>
 
     <div class="mt4 manual-grid">
-      <div class="pa3 shadow-1 br2 bg-near-white">
+      <div class="pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Setup and config</h2>
 
         <h3 class="f5 mb0"><a href="/manuals/git-init">git</a></h3>
@@ -24,7 +24,7 @@
         <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
       </div>
 
-      <div class="pa3 shadow-1 br2 bg-near-white">
+      <div class="pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Getting and creating projects</h2>
 
         <h3 class="f5 mb0">
@@ -42,7 +42,7 @@
         <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
       </div>
 
-      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc3 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Basic snapshotting</h2>
 
         <div class="fl w-100 w-third-ns pr5">
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc3 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Branching and merging</h2>
 
         <div class="fl w-100 w-third-ns">
@@ -131,7 +131,7 @@
         </div>
       </div>
 
-      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc2 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Sharing and updating projects</h2>
 
         <div class="fl w-100 w-50-ns">
@@ -154,7 +154,7 @@
         </div>
       </div>
 
-      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc2 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Inspection and comparison</h2>
 
         <div class="fl w-100 w-50-ns">
@@ -179,7 +179,7 @@
         </div>
       </div>
 
-      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc2 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Patching</h2>
 
         <div class="fl w-100 w-50-ns">
@@ -202,7 +202,7 @@
         </div>
       </div>
 
-      <div class="pa3 shadow-1 br2 bg-near-white">
+      <div class="pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Debugging</h2>
 
         <h3 class="f5 mb0"><a href="/manuals/git-init">bisect</a></h3>
@@ -215,7 +215,7 @@
         <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
       </div>
 
-      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc2 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Email</h2>
 
         <div class="fl w-100 w-50-ns">
@@ -238,7 +238,7 @@
         </div>
       </div>
 
-      <div class="pa3 shadow-1 br2 bg-near-white">
+      <div class="pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">External systems</h2>
 
         <h3 class="f5 mb0"><a href="/manuals/git-init">svn</a></h3>
@@ -248,7 +248,7 @@
         <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
       </div>
 
-      <div class="pa3 shadow-1 br2 bg-near-white">
+      <div class="pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Server admin</h2>
 
         <h3 class="f5 mb0"><a href="/manuals/git-init">daemon</a></h3>
@@ -258,7 +258,7 @@
         <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
       </div>
 
-      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc3 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Guides</h2>
 
         <div class="fl w-100 w-third-ns">
@@ -292,7 +292,7 @@
         </div>
       </div>
 
-      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc3 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Administration</h2>
 
         <div class="fl w-100 w-third-ns">
@@ -326,7 +326,7 @@
         </div>
       </div>
 
-      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+      <div class="gc3 pa3 shadow-deep br2 bg-near-white">
         <h2 class="mv0 f4 fw5 orange">Plumbing commands</h2>
 
         <div class="fl w-100 w-third-ns">
