--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -89,24 +89,46 @@ code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace;
 /*
  * Box shadows
  */
-.shadow-1 {
+.shadow-subtle {
+  box-shadow: 0 1px 2px rgba(0,0,0,.1);
+}
+
+@media screen and (min-width: 30em) {
+  .shadow-subtle-ns {
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+  }
+}
+
+@media screen and (min-width: 30em) and (max-width: 60em) {
+  .shadow-subtle-m {
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .shadow-subtle-l {
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+  }
+}
+
+.shadow-deep {
   box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
 }
 
 @media screen and (min-width: 30em) {
-  .shadow-1-ns {
+  .shadow-deep-ns {
     box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
   }
 }
 
 @media screen and (min-width: 30em) and (max-width: 60em) {
-  .shadow-1-m {
+  .shadow-deep-m {
     box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
   }
 }
 
 @media screen and (min-width: 60em) {
-  .shadow-1-l {
+  .shadow-deep-l {
     box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
   }
 }
