Mobile display updates

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -35,15 +35,19 @@
   </div>
 
   <!-- Sidebar links -->
-  <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray">
+  <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray details-container js-details-container">
+    <button type="button" class="button-reset pointer bg-dark-tan link blue b pv3 ph4 bw0 w-100 tl db dn-l f5 js-details-target">
+      Downloads
+    </button>
+
     <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
       <div class="dropdown-panel">
         <%= render 'translations' %>
 
-        <img  src="/images/progit2.png" class="w-100 pt3" />
+        <img src="/images/progit2.png" class="dn db-l w-100 pt3" />
 
         <% if (@book.ebook_pdf || @book.ebook_epub || @book.ebook_mobi) %>
-          <h3>Downloads</h3>
+          <h3 class="dn db-l">Downloads</h3>
           <ul class="list pl0">
             <% if @book.ebook_pdf %>
               <li>
