Add alt tag to book

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -44,7 +44,7 @@
       <div class="dropdown-panel">
         <%= render 'translations' %>
 
-        <img src="/images/progit2.png" class="dn db-l w-100 pt3" />
+        <img src="/images/progit2.png" class="dn db-l w-100 pt3" alt="Pro Git book cover" />
 
         <% if (@book.ebook_pdf || @book.ebook_epub || @book.ebook_mobi) %>
           <h3 class="dn db-l">Downloads</h3>
