--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,6 +3,7 @@
 
 <div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
   <div class="order-1 order-0-l w-100 w-75-l pl0-l pr5-l lh-copy">
+    <h1 class="f3">Pro Git book</h1>
     <p>
       The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>. Print versions of the book are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
     </p>
