Use overflow-auto instead of overflow-scroll
So that scrollbars don't render unnecessarily.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -41,7 +41,7 @@
       Downloads
     </button>
 
-    <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
+    <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-auto details-content">
       <div class="dropdown-panel">
         <%= render 'translations' %>
 
