--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -16,7 +16,7 @@
       <button type="button" class="button-reset pointer bg-dark-tan link blue b pv3 ph4 bw0 w-100 tl db dn-l f5 js-details-target">
         Manual topics
       </button>
-      <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
+      <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-auto details-content">
         <%= render 'doc/topics' %>
       </div>
     </div>
