--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -40,6 +40,7 @@ This book is available in
     <tr><td><a href="/book/it">Italiano</a>,</td></tr>
     <tr><td><a href="/book/ms">Bahasa Melayu</a>,</td></tr>
     <tr><td><a href="/book/pt-br">Português (Brasil)</a>,</td></tr>
+    <tr><td><a href="/book/pt-pt">Português (Portugal)</a>,</td></tr>
     <tr><td><a href="/book/tr">Türkçe</a>.</td></tr>
   </table>
 </p>
