re-add conservancy donation banner
It's the end-of-the-year fund drive, so let's see if we can send some
traffic their way (as we have in previous years).

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,12 @@
 
 <body id="<%= @section %>">
 
-  <%# <%= render layout: "shared/banner", locals: { id: "freedom-conservancy", dismissable: true, duration: 1 } do %>
-    <!-- Fill in banner content here -->
-  <%# <% end %>
+  <%= render layout: "shared/banner", locals: { id: "conservancy2018", dismissable: true } do %>
+      Git is a member of Software Freedom Conservancy, which handles
+      legal and financial needs for the project.  Conservancy is
+      currently raising funds to continue their mission. Consider
+      <a href="https://sfconservancy.org/supporter/">becoming a supporter</a>!
+  <% end %>
 
   <div class="inner">
     <%= render partial: "shared/header" %>
