--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -99,6 +99,13 @@
           By Rick Umali
         </p>
       </li>
+      <li>
+        <a href="https://www.packtpub.com/application-development/version-control-git-and-github"><img src="https://www.packtpub.com/sites/default/files/B12556_Lowres_Cover.png" width="107"></a>
+        <h4><a href="https://www.packtpub.com/application-development/version-control-git-and-github">Version Control with Git and GitHub</a></h4>
+        <p class='description'>
+          By Alex Magana, Joseph Muli
+        </p>
+      </li>      
     </ul>
   </div>
 </div>
