Fix 'Mastering git' ext book img src

--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -11,7 +11,7 @@
         </p>
       </li>
       <li>
-        <a href="https://www.packtpub.com/application-development/mastering-git"><img src="https://d1ldz4te4covpm.cloudfront.net/sites/default/files/imagecache/ppv4_main_book_cover/3754OS_3537_Mastering%20Git_0.jpg" width="107"></a>
+        <a href="https://www.packtpub.com/application-development/mastering-git"><img src="https://d1ldz4te4covpm.cloudfront.net/sites/default/files/imagecache/ppv4_main_book_cover/B03537_cover.png" width="107"></a>
         <h4><a href="https://www.packtpub.com/application-development/mastering-git">Mastering Git</a></h4>
         <p class='description'>
           By Jakub Narębski
