Make ext books listing standard

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -49,7 +49,8 @@ ul.books-list {
 
     img {
       float: left;
-      width: 109px;
+      width: 107px;
+      height: 141px;
       margin-right: -125px;
       margin-left: -125px;
       border: solid 1px #b7b7b7;
