--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -46,11 +46,12 @@ ul.books-list {
   li {
     @include clearfix;
     padding-left: 125px;
+    height: 150px;
 
     img {
       float: left;
-      width: 107px;
-      height: 141px;
+      width: 109px;
+      max-height: 150px;
       margin-right: -125px;
       margin-left: -125px;
       border: solid 1px #b7b7b7;
