GitHub Cheat Sheet link update

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -21,7 +21,7 @@
   <p class="quickref">
     Quick reference guides:
 
-    <%= link_to "GitHub Cheat Sheet", "https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf" %>
+    <%= link_to "GitHub Cheat Sheet", "https://github.github.com/training-kit/downloads/github-git-cheat-sheet.pdf" %>
     <small class="light">(PDF) &nbsp;|&nbsp;</small>
     <%= link_to "Visual Git Cheat Sheet", "http://ndpsoftware.com/git-cheatsheet.html" %>
     <small class="light"> (SVG | PNG)
