typo: carrets -> carets

--- a/app/views/site/svn.html.erb
+++ b/app/views/site/svn.html.erb
@@ -109,7 +109,7 @@
   not a big hurdle - you can refer to the latest revision by <code>HEAD</code>,
   its parent as <code>HEAD^</code> and its parent as <code>HEAD^^ = HEAD~2</code>
 
-  (you can go on adding carrets),
+  (you can go on adding carets),
   cut'n'paste helps a lot and you can write only the few leading digits
   of a revision - as long as it is unique, Git will guess the rest.
   (You can do even more advanced stuff with revision specifiers, see the
