Add localized versions to manpages

--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -100,6 +100,10 @@ h3.plumbing {
     &#reference-topics-trigger {
       float: right;
     }
+
+    &#reference-languages-trigger {
+      float: right;
+    }
   }
 }
 
@@ -139,6 +143,20 @@ h3.plumbing {
 .windows.chrome #previous-versions-dropdown,
 .windows.ie8 #previous-versions-dropdown {
   width: 370px;
+}
+
+#l10n-versions-dropdown {
+  width: 250px;
+  right: 12px;
+  padding: 12px;
+  font-weight: normal;
+  line-height: 1;
+  header {
+    padding: 0 12px;
+    margin: 0;
+    font-size: 12px;
+    font-weight: normal;
+  }
 }
 
 #topics-dropdown {
