--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -3,6 +3,7 @@
 
 <% cache @doc do %>
   <div id='reference-version'>
+    <%= render 'doc/languages' %>
     <%= render 'doc/topics' %>
     <%= render 'doc/versions' %>
   </div>
