manpages: add a link to translation project

--- a/app/views/doc/_languages.html.erb
+++ b/app/views/doc/_languages.html.erb
@@ -8,6 +8,8 @@
         </a>
         </li>
     <% end %>
-    <li>&nbsp;</li>
   </ol>
+  <footer>
+    Want to read in your language or fix typos?<br/> <a href="https://github.com/jnavila/git-manpages-l10n">You can help translate this page</a>.
+  </footer>
 </div>
