--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -157,6 +157,17 @@ h3.plumbing {
     font-size: 12px;
     font-weight: normal;
   }
+  footer {
+    padding: 4px 12px;
+    margin-top: 0;
+    font-size: 11px;
+    font-weight: normal;
+    a {
+        padding: 4px;
+        margin-top: 0;
+        color: blue;
+    }
+  }
 }
 
 #topics-dropdown {
