[manpages] Update headers of sub-menus
 * Show the present language name instead of the code
 * Show "Latest version" when showing a translation

--- a/app/views/doc/_languages.html.erb
+++ b/app/views/doc/_languages.html.erb
@@ -1,4 +1,5 @@
-<a class="dropdown-trigger" id="reference-languages-trigger" data-panel-id="l10n-versions-dropdown" href="#">Language <%= @language %> ▾</a>
+<a class="dropdown-trigger" id="reference-languages-trigger" data-panel-id="l10n-versions-dropdown" href="#"><%if @language%>
+  <%= @doc_file.true_lang[@language]||@language %> <% else %> Language <% end %>▾</a>
 <div class='dropdown-panel right' id='l10n-versions-dropdown'>
   <header>Localized versions of <strong><%= @doc_file.name %></strong> manual</header>
   <ol class='reference-previous-versions'>
