--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -1,9 +1,9 @@
-<a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">Version
-  <%= if  /\d+\.\d+\.\d+/ =~ @version.name
-        @version.name
-      else
-      @language
-      end %> ▾ </a>
+<a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">
+  <% if  (/\d+\.\d+\.\d+/ =~ @version.name )%>
+    Version <%=  @version.name %>
+     <% else %>
+      Latest version
+      <% end %> ▾ </a>
 <span class="light"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
 <div class='dropdown-panel left' id='previous-versions-dropdown'>
   <header>Changes in the <strong><%= @doc_file.name %></strong> manual</header>
