--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -1,5 +1,5 @@
 <a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">
-  <% if  (/\d+\.\d+\.\d+/ =~ @version.name )%>
+  <% if revision?(@version.name)%>
     Version <%=  @version.name %>
      <% else %>
       Latest version
