--- a/app/views/shared/ref/_plumbing.html.erb
+++ b/app/views/shared/ref/_plumbing.html.erb
@@ -9,6 +9,7 @@
   <li><%= man('git-for-each-ref') %></li>
   <li><%= man('git-hash-object') %></li>
   <li><%= man('git-ls-files') %></li>
+  <li><%= man('git-ls-tree') %></li>
   <li><%= man('git-merge-base') %></li>
   <li><%= man('git-read-tree') %></li>
   <li><%= man('git-rev-list') %></li>
