[book] Add Azerbaijani translation of the book.

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -34,6 +34,7 @@ This book is available in
 <p>
   Translations started for
   <table>
+    <tr><td><a href="/book/az">azərbaycan dili</a>,</td></tr>
     <tr><td><a href="/book/be">Беларуская</a>,</td></tr>
     <tr><td><a href="/book/fa" dir="rtl">فارسی</a>,</td></tr>
     <tr><td><a href="/book/id">Indonesian</a>,</td></tr>
