reference: add gitcli to guides section
https://git-scm.com/docs/gitcli

--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -1,6 +1,7 @@
 <h3 class='guides'>Guides</h3>
 <ul class='unstyled'>
   <li><%= man('gitattributes') %></li>
+  <li><%= man('gitcli', 'Command-line interface conventions') %></li>
   <li><%= man('giteveryday', 'Everyday Git') %></li>
   <li><%= man('gitglossary', 'Glossary') %></li>
   <li><%= man('githooks') %></li>
