reference: add gitsubmodules to guides section
https://git-scm.com/docs/gitsubmodules

--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -8,6 +8,7 @@
   <li><%= man('gitignore') %></li>
   <li><%= man('gitmodules') %></li>
   <li><%= man('gitrevisions', 'Revisions') %></li>
+  <li><%= man('gitsubmodules', 'Submodules') %></li>
   <li><%= man('gittutorial', 'Tutorial') %></li>
   <li><%= man('gitworkflows', 'Workflows') %></li>
 </ul>
