--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -24,7 +24,7 @@
     <%= link_to "GitHub Cheat Sheet", "https://github.github.com/training-kit/downloads/github-git-cheat-sheet.pdf" %>
     <small class="light">(PDF) &nbsp;|&nbsp;</small>
     <%= link_to "Visual Git Cheat Sheet", "http://ndpsoftware.com/git-cheatsheet.html" %>
-    <small class="light"> (SVG | PNG)
+    <small class="light"> (SVG | PNG)</small>
 
   </p>
 
@@ -37,7 +37,10 @@
       Dead tree versions are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
     </p>
   </div>
-    <h2> Videos </h2>
+  
+  <h2> Videos </h2>
+
+  <div>
 
     <% groups = @videos[0,4].group_by { |i| i[0] % 2 } %>
 
