--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -23,7 +23,7 @@
 
     <%= link_to "GitHub Cheat Sheet", "https://github.github.com/training-kit/downloads/github-git-cheat-sheet.pdf" %>
     <small class="light">(PDF) &nbsp;|&nbsp;</small>
-    <%= link_to "Visual Git Cheat Sheet", "http://ndpsoftware.com/git-cheatsheet.html" %>
+    <%= link_to "Visual Git Cheat Sheet", "https://ndpsoftware.com/git-cheatsheet.html" %>
     <small class="light"> (SVG | PNG)</small>
 
   </p>
@@ -34,7 +34,7 @@
     <h3>Pro Git</h3>
     <p>The entire <strong><a href="/book">Pro Git book</a></strong> written
       by Scott Chacon and Ben Straub is available to <a href="/book">read online for free</a>.
-      Dead tree versions are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
+      Dead tree versions are available on <a href="https://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
     </p>
   </div>
   
