Move divider outside of subscript

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -22,9 +22,10 @@
     Quick reference guides:
 
     <%= link_to "GitHub Cheat Sheet", "https://github.github.com/training-kit/downloads/github-git-cheat-sheet.pdf" %>
-    <small class="light">(PDF) &nbsp;|&nbsp;</small>
+    <small class="light">(PDF)</small>
+    |
     <%= link_to "Visual Git Cheat Sheet", "https://ndpsoftware.com/git-cheatsheet.html" %>
-    <small class="light"> (SVG | PNG)</small>
+    <small class="light">(SVG | PNG)</small>
 
   </p>
 
