Align Callout on Reference page with #1388

--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -8,8 +8,9 @@
     <p>
       Quick reference guides:
       <a href="https://github.github.com/training-kit/downloads/github-git-cheat-sheet.pdf">GitHub Cheat Sheet</a>
-      <small class='light'>(PDF) &nbsp;|&nbsp;</small>
-      <a href="http://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
+      <small class='light'>(PDF)</small>
+      |
+      <a href="https://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
       <small class='light'>(SVG | PNG)</small>
     </p>
   </div>
