Mark link to current subsection as active

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -5,25 +5,25 @@
         <%= link_to "About", "/about", sidebar_link_options("about") %>
         <ul class="<%= @section == "about" ? "expanded" : ""%>">
           <li>
-            <%= link_to "Branching and Merging", "/about", sidebar_link_options("branching-and-merging") %>
+            <%= link_to "Branching and Merging", "/about" %>
           </li>
           <li>
-            <%= link_to "Small and Fast", "/about/small-and-fast", sidebar_link_options("small-and-fast") %>
+            <%= link_to "Small and Fast", "/about/small-and-fast" %>
           </li>
           <li>
-            <%= link_to "Distributed", "/about/distributed", sidebar_link_options("distributed") %>
+            <%= link_to "Distributed", "/about/distributed" %>
           </li>
           <li>
-            <%= link_to "Data Assurance", "/about/info-assurance", sidebar_link_options("info-assurance") %>
+            <%= link_to "Data Assurance", "/about/info-assurance" %>
           </li>
           <li>
-            <%= link_to "Staging Area", "/about/staging-area", sidebar_link_options("staging-area") %>
+            <%= link_to "Staging Area", "/about/staging-area" %>
           </li>
           <li>
-            <%= link_to "Free and Open Source", "/about/free-and-open-source", sidebar_link_options("free-and-open-source") %>
+            <%= link_to "Free and Open Source", "/about/free-and-open-source" %>
           </li>
           <li>
-            <%= link_to "Trademark", "/about/trademark", sidebar_link_options("trademark") %>
+            <%= link_to "Trademark", "/about/trademark" %>
           </li>
         </ul>
       </li>
