Mark current chapter as active

--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -132,6 +132,10 @@ ol.book-toc {
 
         a {
           font-weight: normal;
+
+          &.active {
+            font-weight: bold;
+          }
         }
       }
     }
