--- a/app/views/books/_chapter_listings.html.erb
+++ b/app/views/books/_chapter_listings.html.erb
@@ -12,7 +12,7 @@
         <% if !section.title.empty? %>
           <li>
             <%= chapter.cs_number %>.<%= section.number %>
-            <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
+            <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>" <%= 'class=active' if @content.title == section.title %>><%=raw section.title %></a>
           </li>
         <% end %>
       <% end %>
