Add missing porcelain commands to Reference page
Add switch, restore, range-diff, difftool and notes commands.

--- a/app/views/shared/ref/_branching.html.erb
+++ b/app/views/shared/ref/_branching.html.erb
@@ -2,6 +2,7 @@
 <ul class='unstyled'>
   <li><%= man('git-branch') %></li>
   <li><%= man('git-checkout') %></li>
+  <li><%= man('git-switch') %></li>
   <li><%= man('git-merge') %></li>
   <li><%= man('git-mergetool') %></li>
   <li><%= man('git-log') %></li>
