reference: add "All commands" link
This links to the "COMMANDS" section of the Git man page.

--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -298,6 +298,15 @@ ol.reference-previous-versions {
   }
 }
 
+.callout.all-commands {
+  @include background-image-2x("/images/icons/book", 15px, 21px, 14px 7px);
+  padding-left: 36px !important;
+
+  a {
+    font-weight: bold;
+  }
+}
+
 .callout.ref-manual {
   @include background-image-2x("/images/icons/book", 54px, 72px, 24px 20px);
   padding: 20px 30px 20px 100px !important;
