--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -14,6 +14,9 @@
       <small class='light'>(SVG | PNG)</small>
     </p>
   </div>
+  <div class="callout all-commands">
+    <a href="/docs/git#_git_commands">Complete list of all commands<a/>
+  </div>
   <div class='reference-menu'>
     <div class='two-column'>
       <div class='column-left'>
