about-site: clarify bug reporting for progit translations
If the problem is in the translation, issues should be opened in the
language repos, not the main one. The progit2 issue template already
redirects people, but we can save them one step.

--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -25,8 +25,13 @@
     repository, which is available under a Creative Commons
     <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC-BY-NC-SA</a>
     license, <a href="https://github.com/progit/progit2/blob/master/LICENSE.asc">
-    as specified in the progit2 repository</a>.
-    Bug reports and suggestions may be made in the progit2 repository.
+    as specified in the progit2 repository</a>. Bug reports and
+    suggestions on the technical content or English language version of
+    the book should be made in the progit2 repository. Fixes for
+    translated versions of the book should be made in the
+    <a href="https://github.com/progit/progit2/blob/master/TRANSLATING.md#helping-with-a-existing-project">
+    appropriate language-specific repository</a>.
+
 
     <li>The reference manual is imported from the Git project, and is
     available under the <a href="https://github.com/git/git/blob/master/COPYING">GPL</a>.
