--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -47,6 +47,6 @@ This book is available in
 </p>
 <hr class="sidebar"/>
 <p>
-The source of this book is <a href="https://github.com/progit/progit2">hosted on GitHub.</a></br>
+The source of this book is <%if @book.code == "en" %><a href="https://github.com/progit/progit2">hosted on GitHub.</a><% else %> <a href="https://github.com/<%= Book.all_books[@book.code] %>">hosted on GitHub.</a><% end %></br>
 Patches, suggestions and comments are welcome.
 </p>
