Refine some text on the About page to read better

--- a/app/views/about/_small_and_fast.html.erb
+++ b/app/views/about/_small_and_fast.html.erb
@@ -90,7 +90,7 @@
           <th class="right">SVN</th>
         </tr>
         <tr><td nowrap="">Commit Files (A)</td><td class="desc">Add, commit and push 113 modified files (2164+, 2259-)</td><td class="number">0.64</td><td class="number">2.60</td><td class="number">4x</td></tr>
-        <tr><td nowrap="">Commit Images (B)</td><td class="desc">Add, commit and push 1000 1&nbsp;kB images</td><td class="number">1.53</td><td class="number">24.70</td><td class="number">16x</td></tr>
+        <tr><td nowrap="">Commit Images (B)</td><td class="desc">Add, commit and push a thousand 1&nbsp;kB images</td><td class="number">1.53</td><td class="number">24.70</td><td class="number">16x</td></tr>
         <tr><td nowrap="">Diff Current</td><td class="desc">Diff 187 changed files (1664+, 4859-) against last commit</td><td class="number">0.25</td><td class="number">1.09</td><td class="number">4x</td></tr>
         <tr><td nowrap="">Diff Recent</td><td class="desc">Diff against 4 commits back (269 changed/3609+,6898-)</td><td class="number">0.25</td><td class="number">3.99</td><td class="number">16x</td></tr>
         <tr><td nowrap="">Diff Tags</td><td class="desc">Diff two tags against each other (v1.9.1.0/v1.9.3.0)</td><td class="number">1.17</td><td class="number">83.57</td><td class="number">71x</td></tr>
@@ -103,8 +103,8 @@
     </table>
 
     <p>
-      Note that this is the best case scenario for SVN&mdash;a server with no load with an
-      640&nbsp;Mbit/s bandwidth connection to the client machine. Nearly all of these
+      Note that this is the best case scenario for SVN&mdash;a server with no load with a
+      gigabit connection to the client machine. Nearly all of these
       times would be even worse for SVN if that connection was slower, while
       many of the Git times would not be affected.
     </p>
