--- a/app/views/downloads/downloading.html.erb
+++ b/app/views/downloads/downloading.html.erb
@@ -9,18 +9,17 @@
 <div id="main">
   <h1>Downloading Git</h1>
   <div class="callout downloading">
-    <h3>Your download is starting...</h3>
+    <h3 class="hide">Your download is starting...</h3>
     <p>
       <%= raw "You are downloading version <strong>#{@download.version.name}</strong> of Git for the <strong>#{@platform.capitalize}</strong> platform. This is the most recent <a href='#{@project_url}'>maintained build</a> for this platform. It was released <strong>#{time_ago_in_words @download.release_date} ago</strong>, on #{@download.release_date.strftime("%Y-%m-%d")}." %>
     </p>
     <p>
-      <%= raw "<strong>If your download hasn't started, <a href=\"#{@download.url}\">click here to download manually</a>.</strong>" %>
+    <%= raw "<strong><a id=\"auto-download-link\" href=\"#{@download.url}\">Click here to download manually</a><span class=\"hide\">, if your download hasn't started.</span></strong>" %>
     </p>
     <p class="small">
       <%= raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"#{@source_url}\">the source code</a>." %>
     </p>
   </div>
-  <iframe frameborder="0" height="1" src="<%= @download.url %>" width="1"></iframe>
   <h2>Now What?</h2>
   <p>
     Now that you have downloaded Git, it's time to start using it.
@@ -49,4 +48,3 @@
     </li>
   </ul>
 </div>
-
