Replace pdf link with url with multiple languages

--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -7,11 +7,9 @@
   <div class='callout quickref'>
     <p>
       Quick reference guides:
-      <%= link_to "GitHub Cheat Sheet", "https://github.github.com/training-kit/downloads/github-git-cheat-sheet.pdf" %>
-      <small class='light'>(PDF)</small>
+      <%= link_to "GitHub Cheat Sheet", "https://github.github.com/training-kit/" %>
       |
       <%= link_to "Visual Git Cheat Sheet", "https://ndpsoftware.com/git-cheatsheet.html" %>
-      <small class='light'>(SVG | PNG)</small>
     </p>
   </div>
   <div class="callout all-commands">
