Add 'Git for Teams' to ext book list

--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -102,6 +102,13 @@
         <p class='description'>
           By Alex Magana, Joseph Muli
         </p>
+      </li>      
+      <li>
+        <a href="http://gitforteams.com/"><img src="http://akamaicovers.oreilly.com/images/0636920034520/cat.gif"></a>
+        <h4><a href="http://gitforteams.com/">Git for Teams</a></h4>
+        <p class='description'>
+          By Emma Jane Hogbin Westby
+        </p>
       </li>
     </ul>
   </div>
