--- a/app/views/downloads/download_mac.html.erb
+++ b/app/views/downloads/download_mac.html.erb
@@ -7,44 +7,29 @@
 <% end %>
 
 <div id="main">
-  <h1>Downloading Git</h1>
-  <div class="callout downloading">
-    <h3 class="hide">Your download is starting...</h3>
-    <p>
-      <%= raw "You are downloading version <strong>#{@download.version.name}</strong> of Git for the <strong>#{@platform.capitalize}</strong> platform. This is the most recent <a href='#{@project_url}'>maintained build</a> for this platform. It was released <strong>#{time_ago_in_words @download.release_date} ago</strong>, on #{@download.release_date.strftime("%Y-%m-%d")}." %>
-    </p>
-    <p>
-    <%= raw "<strong><a id=\"auto-download-link\" href=\"#{@download.url}\">Click here to download manually</a><span class=\"hide\">, if your download hasn't started.</span></strong>" %>
-    </p>
-    <p class="small">
-      <%= raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"#{@source_url}\">the source code</a>." %>
-    </p>
-  </div>
-  <h2>Now What?</h2>
-  <p>
-    Now that you have downloaded Git, it's time to start using it.
-  </p>
-  <ul id="download-next-steps">
-    <li>
-      <a href="/book">
-      <img src="/images/icons/nav-read-book.png" />
-      <h3>Read the Book</h3>
-      <p>Dive into the Pro Git book and learn at your own pace.</p>
-      </a>
-    </li>
-    <li>
-      <a href="/downloads/guis">
-      <img src="/images/icons/nav-download-gui.png" />
-      <h3>Download a GUI</h3>
-      <p><%= raw "Several free and commercial GUI tools are available for the #{@platform.capitalize} platform." %></p>
-      </a>
-    </li>
-    <li>
-      <a href="/community">
-      <img src="/images/icons/nav-get-involved.png" />
-      <h3>Get Involved</h3>
-      <p>A knowledgeable Git community is available to answer your questions.</p>
-      </a>
-    </li>
-  </ul>
+  <h1>Download for macOS</h1>
+
+  <p>There are several options for installing Git on macOS. Note that
+  any non-source distributions are provided by third parties, and may
+  not be up to date with the latest source release.</p>
+
+  <h3>Homebrew</h3>
+  <p>Install <a href="https://brew.sh/">homebrew</a> if you don't already have it, then:<br>
+  <code>$ brew install git</code></p>
+
+  <h3>XCode</h3>
+  <p>Apple ships a binary package of Git with <a href="https://developer.apple.com/xcode/">XCode</a>.</p>
+
+  <h3>Binary installer</h3>
+  <p>Tim Harper provides an <a href="https://sourceforge.net/projects/git-osx-installer/">installer</a>
+  for Git. The latest version is <a href="<%= @download.url %>"><%= @download.version.name %></a>,
+  which was released <%= time_ago_in_words @download.release_date %> ago, on
+  <%= @download.release_date.strftime("%Y-%m-%d") %>.
+
+  <h3>Building from Source</h3>
+  <p>If you prefer to build from source, you can find tarballs
+  <a href="https://www.kernel.org/pub/software/scm/git/">on kernel.org</a>.
+  The latest version is
+  <a href="https://www.kernel.org/pub/software/scm/git/git-<%= @latest.name %>.tar.gz"><%= @latest.name %></a>.
+
 </div>
