downloads: use link_to
This is much more readable than the manual expansions, and would get any
encoding right (on the off chance that the version names had funny
characters in them).

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -6,9 +6,9 @@
   <p>It is easiest to install Git on Linux using the preferred package
   manager of your Linux distribution. If you prefer to build from
   source, you can find tarballs
-  <a href="https://www.kernel.org/pub/software/scm/git/">on kernel.org</a>.
+  <%= link_to "on kernel.org", "https://www.kernel.org/pub/software/scm/git/" %>.
   The latest version is
-  <a href="https://www.kernel.org/pub/software/scm/git/git-<%= @latest.name %>.tar.gz"><%= @latest.name %></a>.
+  <%= link_to @latest.name, "https://www.kernel.org/pub/software/scm/git/git-#{@latest.name}.tar.gz"%>.
 
   <h3>Debian/Ubuntu</h3>
   <p>For the latest stable version for your release of Debian/Ubuntu</p>
