--- a/app/views/downloads/download_mac.html.erb
+++ b/app/views/downloads/download_mac.html.erb
@@ -22,14 +22,14 @@
 
   <h3>Binary installer</h3>
   <p>Tim Harper provides an <a href="https://sourceforge.net/projects/git-osx-installer/">installer</a>
-  for Git. The latest version is <a href="<%= @download.url %>"><%= @download.version.name %></a>,
+  for Git. The latest version is <%= link_to @download.version.name, @download.url %>,
   which was released <%= time_ago_in_words @download.release_date %> ago, on
   <%= @download.release_date.strftime("%Y-%m-%d") %>.
 
   <h3>Building from Source</h3>
   <p>If you prefer to build from source, you can find tarballs
-  <a href="https://www.kernel.org/pub/software/scm/git/">on kernel.org</a>.
+  <%= link_to "on kernel.org", "https://www.kernel.org/pub/software/scm/git/" %>.
   The latest version is
-  <a href="https://www.kernel.org/pub/software/scm/git/git-<%= @latest.name %>.tar.gz"><%= @latest.name %></a>.
+  <%= link_to @latest.name, "https://www.kernel.org/pub/software/scm/git/git-#{@latest.name}.tar.gz"%>.
 
 </div>
