Update links to prevent redirects

--- a/app/views/about/_free_and_open_source.html.erb
+++ b/app/views/about/_free_and_open_source.html.erb
@@ -1,8 +1,8 @@
   <section class="about" id="free-and-open-source" style="display: none;">
     <h2>Free and Open Source</h2>
-    <p>Git is released under the <a href="http://opensource.org/licenses/GPL-2.0"
+    <p>Git is released under the <a href="https://opensource.org/licenses/GPL-2.0"
 	>GNU General Public License version 2.0</a>, which is an
-	<a href="http://www.opensource.org/docs/osd">open source license</a>.
+	<a href="https://opensource.org/docs/osd">open source license</a>.
 	The Git project chose to use GPLv2 to guarantee your freedom to
 	share and change free software---to make sure the software is
 	free for all its users.</p>
