docs: add gitfaq to the list of guides

--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -3,6 +3,7 @@
   <li><%= man('gitattributes') %></li>
   <li><%= man('gitcli', 'Command-line interface conventions') %></li>
   <li><%= man('giteveryday', 'Everyday Git') %></li>
+  <li><%= man('gitfaq', 'Frequently Asked Questions (FAQ)') %></li>
   <li><%= man('gitglossary', 'Glossary') %></li>
   <li><%= man('githooks') %></li>
   <li><%= man('gitignore') %></li>
