community: advertise 'git-bugreport' tool
Starting with 2.27.0, 'git bugreport' can gather diagnostic info and
drop the user into an editor with a template for a useful bugreport.
Advertise this feature to users who want to report a bug in Git.

Signed-off-by: Emily Shaffer <emilyshaffer@google.com>

--- a/app/views/shared/ref/_setup.html.erb
+++ b/app/views/shared/ref/_setup.html.erb
@@ -3,4 +3,5 @@
   <li><%= man('git') %></li>
   <li><%= man('git-config') %></li>
   <li><%= man('git-help') %></li>
+  <li><%= man('git-bugreport') %></li>
 </ul>
