--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -12,7 +12,11 @@
   <h2> Mailing List</h2>
 
   <p>
-    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. <strong>Bug reports for git should be sent to this mailing list.</strong>
+    General questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. 
+  </p>
+  
+  <p>
+    <strong>If you wish to report any possible bug for git, please use this mailing list as well.</strong>
   </p>
 
   <p>
