--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -16,7 +16,7 @@
   </p>
   
   <p>
-    <strong>If you wish to report any possible bug for git, please use this mailing list as well.</strong>
+    <strong>If you wish to report any possible bug for Git, please use this mailing list as well.</strong>
   </p>
 
   <p>
