--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -42,12 +42,12 @@
     Bugs in git can be reported directly to the mailing list (see above for
     details). Note that you do not need to subscribe to the list to send to it.
     If you are using git 2.27.0 or later, you can run
-    <a href="/docs/git-bugreport"><code>git bugreport</code></a>, which
+    <a href="/docs/git-bugreport"><span class="fixed">git bugreport</span></a>, which
     generates a template to guide you through writing a useful bug report and
     gathers some diagnostic information about your environment. You can help us
     out by attempting to reproduce the bug in the latest released version of
     git, or if you're willing to build git from source, the
-    <a href="https://github.com/git/git/tree/next"><code>next</code> branch</a>.
+    <a href="https://github.com/git/git/tree/next"><span class="fixed">next</span> branch</a>.
     Sometimes an attempted fix may be pending in this branch, in which case
     your feedback as to whether the fix worked for you will be appreciated.
   </p>
