--- a/app/views/downloads/download_mac.html.erb
+++ b/app/views/downloads/download_mac.html.erb
@@ -17,8 +17,8 @@
   <p>Install <a href="https://brew.sh/">homebrew</a> if you don't already have it, then:<br>
   <code>$ brew install git</code></p>
 
-  <h3>XCode</h3>
-  <p>Apple ships a binary package of Git with <a href="https://developer.apple.com/xcode/">XCode</a>.</p>
+  <h3>Xcode</h3>
+  <p>Apple ships a binary package of Git with <a href="https://developer.apple.com/xcode/">Xcode</a>.</p>
 
   <h3>Binary installer</h3>
   <p>Tim Harper provides an <a href="https://sourceforge.net/projects/git-osx-installer/">installer</a>
