Underline the "Release notes" link
The last step changed the color of the "Release Notes" link for better
contrast. This in turn made it hard to identify that it's a link. So,
 underline the "Release Notes" link so that it's obvious that it
is a link.

Also, make sure that this doesn't affect the download link as the current
button-like style looks good already.

--- a/app/assets/stylesheets/front-page.scss
+++ b/app/assets/stylesheets/front-page.scss
@@ -148,6 +148,7 @@ $monitor-height: 271px;
   a {
     color: #eee;
     font-size: 12px;
+    text-decoration: underline;
   }
 
   span.release-date {
@@ -171,6 +172,7 @@ $monitor-height: 271px;
     border-left: solid 1px #1f6367;
     transition-duration: 0.3s;
     transition-property: background-image;
+    text-decoration: none;
 
     &:hover {
       background-image: linear-gradient(#1a7e84, #165b60);
