Added in instructions for installing gitk

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -56,5 +56,63 @@
 
   <h3>Slitaz</h3>
   <code>$ tazpkg get-install git</code>
+  
+  <h1>Downloading gitk</h1>
+  <p>Gitk is an application that is built in <a href="https://www.tcl.tk/">tcl/tk</a>, a compiled and interpreted language written in C that allows you to build GUI applications.</p>
+  
+  <h3>Debian/Ubuntu</h3>
+  <code>$ sudo apt install gitk</code>
+  
+  <h3>Fedora and Amazon Linux</h3>
+  <code>$ sudo yum install tk</code>
+  <code>$ sudo yum install gitk</code>
+  
+  <h3>Gentoo</h3>
+  <p>Check this <a href="https://bugs.gentoo.org/171230">Gentoo issue</a> for more information on how to install Gitk</p>
+  
+  <h3>Arch Linux</h3>
+  <p>Download Git and you will be prompted to download gitk. Check that optional dependency. To install git on Arch Linux, refer to above.</p>
+  
+  <h3>openSUSE</h3>
+  <h4>For standard run, execute the following:</h4>
+  <code>$ zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/standard/openSUSE:Leap:15.2:Update.repo</code>
+  <code>$ zypper refresh</code>
+  <code>$ zypper install gitk</code>
+  
+  <h4>For port run, execute the following:</h4>
+  <code>$ zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/ports/openSUSE:Leap:15.2:Update.repo</code>
+  <code>$ zypper refresh</code>
+  <code>$ zypper install gitk</code>
+  
+  <h4>Mageia</h4>
+  <p>Here is the <a href="https://madb.mageia.org/package/show/application/0/name/gitk">page for gitk</a> on Mageia's package catalog. It has a list of RPM files. Choose your RPM file and then run the following on it:</p>
+  <code>$ rpm -i file.rpm</code>
+  <p>Replace <i>file.rpm</i> with the path to the RPM file that you installed.</p>
+  
+  <h3>Nix/NixOS</h3>
+  <code>$ nix-env -iA nixos.gitAndTools.gitFull</code>
+  
+  <h3>FreeBSD</h3>
+  <p>On FreeBSD gitk is installed with git.</p>
+  
+  <h3>Solaris 10/11 (<a href="https://www.opencsw.org">OpenCSW</a>)</h3>
+  <code>$ pkgadd -d http://get.opencsw.org/now</code>
+  <code>$ /opt/csw/bin/pkgutil -U</code>
+  <code>$ /opt/csw/bin/pkgutil -y -i gitk </code>
+  <code>$ /usr/sbin/pkgchk -L CSWgitk # list files</code>
+  
+  <h3>Solaris 11 Express</h3>
+  <p>On Solaris 11 Express gitk is installed with Git.</p>
+  
+  <h3>OpenBSD</h3>
+  <p>On OpenBSD, gitk is installed with Git.</p>
+  
+  <h3>Alpine</h3>
+  <p>Gitk is a subpackage of git on Alphine Linux. It can be invoked with git-gitk.</p>
+  
+  <h3>Slitaz</h3>
+  <p>Click <a href="http://forum.slitaz.org/topic/gitk?bb_attachments=43156&bbat=2350">here</a> to get a tazpkg file for gitk. After installing it, run:</p>
+  <code>$ tarpkg install file.tarpkg</code>
+  <p>Remember to replace file.tarpkg with the path to your downloaded tarpkg file.</p>
 
 </div>
