--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -65,9 +65,15 @@
   
   <h3>Solaris 9/10/11 (<a href="https://www.opencsw.org">OpenCSW</a>)</h3>
   <code># pkgutil -i git</code>
+  <p>Optionally, if you would also like to install gitk, then run the following:</p>
+  <code>$ pkgadd -d http://get.opencsw.org/now</code>
+  <code>$ /opt/csw/bin/pkgutil -U</code>
+  <code>$ /opt/csw/bin/pkgutil -y -i gitk </code>
+  <code>$ /usr/sbin/pkgchk -L CSWgitk # list files</code>
 
   <h3>Solaris 11 Express</h3>
   <code># pkg install developer/versioning/git</code>
+  <p>On Solaris 11 Express gitk is installed with Git.</p>
   
   <h3>OpenBSD</h3>
   <code># pkg_add git</code>
@@ -81,7 +87,7 @@
 
   <h3>Slitaz</h3>
   <code>$ tazpkg get-install git</code>
-  <p>Click <a href="http://forum.slitaz.org/topic/gitk?bb_attachments=43156&bbat=2350">here</a> to get a tazpkg file for gitk. After installing it, run:</p>
+  <p>If you also want to install gitk click <a href="http://forum.slitaz.org/topic/gitk?bb_attachments=43156&bbat=2350">here</a> to get a tazpkg file for gitk. After installing it, run:</p>
   <code>$ tarpkg install file.tarpkg</code>
   <p>Remember to replace file.tarpkg with the path to your downloaded tarpkg file.</p>
 
