Changed all $ for #

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -23,8 +23,8 @@
   <code># yum install git</code> (up to Fedora 21)<br>
   <code># dnf install git</code> (Fedora 22 and later)
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
-  <code>$ sudo yum install tk</code>
-  <code>$ sudo yum install gitk</code>
+  <code># sudo yum install tk</code>
+  <code># sudo yum install gitk</code>
 
   <h3>Gentoo</h3>
   <code># emerge --ask --verbose dev-vcs/git</code>
@@ -39,14 +39,14 @@
   <p>To install gitk:</p>
 
   <h4>For standard run, execute the following:</h4>
-  <code>$ zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/standard/openSUSE:Leap:15.2:Update.repo</code>
-  <code>$ zypper refresh</code>
-  <code>$ zypper install gitk</code>
+  <code># zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/standard/openSUSE:Leap:15.2:Update.repo</code>
+  <code># zypper refresh</code>
+  <code># zypper install gitk</code>
   
   <h4>For port run, execute the following:</h4>
-  <code>$ zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/ports/openSUSE:Leap:15.2:Update.repo</code>
-  <code>$ zypper refresh</code>
-  <code>$ zypper install gitk</code>
+  <code># zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/ports/openSUSE:Leap:15.2:Update.repo</code>
+  <code># zypper refresh</code>
+  <code># zypper install gitk</code>
 
   <h3>Mageia</h3>
   <code># urpmi git</code>
@@ -57,7 +57,7 @@
   <h3>Nix/NixOS</h3>
   <code># nix-env -i git</code>
   <p>To install gitk:</p>
-  <code>$ nix-env -iA nixos.gitAndTools.gitFull</code>
+  <code># nix-env -iA nixos.gitAndTools.gitFull</code>
 
   <h3>FreeBSD</h3>
   <code># pkg install git</code>
@@ -66,10 +66,10 @@
   <h3>Solaris 9/10/11 (<a href="https://www.opencsw.org">OpenCSW</a>)</h3>
   <code># pkgutil -i git</code>
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
-  <code>$ pkgadd -d http://get.opencsw.org/now</code>
-  <code>$ /opt/csw/bin/pkgutil -U</code>
-  <code>$ /opt/csw/bin/pkgutil -y -i gitk </code>
-  <code>$ /usr/sbin/pkgchk -L CSWgitk # list files</code>
+  <code># pkgadd -d http://get.opencsw.org/now</code>
+  <code># /opt/csw/bin/pkgutil -U</code>
+  <code># /opt/csw/bin/pkgutil -y -i gitk </code>
+  <code># /usr/sbin/pkgchk -L CSWgitk # list files</code>
 
   <h3>Solaris 11 Express</h3>
   <code># pkg install developer/versioning/git</code>
@@ -79,16 +79,16 @@
   <code># pkg_add git</code>
 
   <h3>Alpine</h3>
-  <code>$ apk add git</code>
+  <code># apk add git</code>
   <p>Gitk is a subpackage of git on Alphine Linux. It can be invoked with git-gitk.</p>
   
   <h3>Red Hat Enterprise Linux, Oracle Linux, CentOS, Scientific Linux, et al.</h3>
   <p>RHEL and derivatives typically ship older versions of git. You can <a href="https://www.kernel.org/pub/software/scm/git/">download a tarball</a> and build from source, or use a 3rd-party repository such as <a href="https://ius.io/">the IUS Community Project</a> to obtain a more recent version of git.</p>
 
   <h3>Slitaz</h3>
-  <code>$ tazpkg get-install git</code>
+  <code># tazpkg get-install git</code>
   <p>If you also want to install gitk click <a href="http://forum.slitaz.org/topic/gitk?bb_attachments=43156&bbat=2350">here</a> to get a tazpkg file for gitk. After installing it, run:</p>
-  <code>$ tarpkg install file.tarpkg</code>
+  <code># tarpkg install file.tarpkg</code>
   <p>Remember to replace file.tarpkg with the path to your downloaded tarpkg file.</p>
 
 </div>
