Prevented wrapping by using pre

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -12,83 +12,83 @@
 
   <h3>Debian/Ubuntu</h3>
   <p>For the latest stable version for your release of Debian/Ubuntu</p>
-  <code># apt-get install git</code>
+  <pre><code># apt-get install git</code></pre>
   <p>For Ubuntu, this PPA provides the latest stable upstream Git version</p>
-  <code># add-apt-repository ppa:git-core/ppa</code>
-  <code># apt update; apt install git</code>
+  <pre><code># add-apt-repository ppa:git-core/ppa</code></pre>
+  <pre><code># apt update; apt install git</code></pre>
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
-  <code># sudo apt install gitk</code>
+  <pre><code># sudo apt install gitk</code></pre>
   
   <h3>Fedora</h3>
-  <code># yum install git</code> (up to Fedora 21)<br>
-  <code># dnf install git</code> (Fedora 22 and later)
+  <pre><code># yum install git</code></pre> (up to Fedora 21)<br>
+  <pre><code># dnf install git</code></pre> (Fedora 22 and later)
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
-  <code># sudo yum install tk</code>
-  <code># sudo yum install gitk</code>
+  <pre><code># sudo yum install tk</code></pre>
+  <pre><code># sudo yum install gitk</code></pre>
 
   <h3>Gentoo</h3>
-  <code># emerge --ask --verbose dev-vcs/git</code>
+  <pre><code># emerge --ask --verbose dev-vcs/git</code></pre>
   <p>Check this <a href="https://bugs.gentoo.org/171230">Gentoo issue</a> for more information on how to install Gitk on Gentoo</p>
 
   <h3>Arch Linux</h3>
-  <code># pacman -S git</code>
+  <pre><code># pacman -S git</code></pre>
   <p>Download Git and you will be prompted to download gitk. Check that optional dependency</p>
 
   <h3>openSUSE</h3>
-  <code># zypper install git</code>
+  <pre><code># zypper install git</code></pre>
   <p>To install gitk:</p>
 
   <h4>For standard run, execute the following:</h4>
-  <code># zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/standard/openSUSE:Leap:15.2:Update.repo</code>
-  <code># zypper refresh</code>
-  <code># zypper install gitk</code>
+  <pre><code># zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/standard/openSUSE:Leap:15.2:Update.repo</code></pre>
+  <pre><code># zypper refresh</code></pre>
+  <pre><code># zypper install gitk</code></pre>
   
   <h4>For port run, execute the following:</h4>
-  <code># zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/ports/openSUSE:Leap:15.2:Update.repo</code>
-  <code># zypper refresh</code>
-  <code># zypper install gitk</code>
+  <pre><code># zypper addrepo https://download.opensuse.org/repositories/openSUSE:Leap:15.2:Update/ports/openSUSE:Leap:15.2:Update.repo</code></pre>
+  <pre><code># zypper refresh</code></pre>
+  <pre><code># zypper install gitk</code></pre>
 
   <h3>Mageia</h3>
-  <code># urpmi git</code>
+  <pre><code># urpmi git</code></pre>
   <p>If you would like to optionally install gitk: here is the <a href="https://madb.mageia.org/package/show/application/0/name/gitk">page for gitk</a> on Mageia's package catalog. It has a list of RPM files. Choose your RPM file and then run the following on it:</p>
-  <code>$ rpm -i file.rpm</code>
+  <pre><code>$ rpm -i file.rpm</code></pre>
   <p>Replace <i>file.rpm</i> with the path to the RPM file that you installed.</p>
 
   <h3>Nix/NixOS</h3>
-  <code># nix-env -i git</code>
+  <pre><code># nix-env -i git</code></pre>
   <p>To install gitk:</p>
-  <code># nix-env -iA nixos.gitAndTools.gitFull</code>
+  <pre><code># nix-env -iA nixos.gitAndTools.gitFull</code></pre>
 
   <h3>FreeBSD</h3>
-  <code># pkg install git</code>
+  <pre><code># pkg install git</code></pre>
   <p>On FreeBSD gitk is installed with git.</p>
   
   <h3>Solaris 9/10/11 (<a href="https://www.opencsw.org">OpenCSW</a>)</h3>
-  <code># pkgutil -i git</code>
+  <pre><code># pkgutil -i git</code></pre>
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
-  <code># pkgadd -d http://get.opencsw.org/now</code>
-  <code># /opt/csw/bin/pkgutil -U</code>
-  <code># /opt/csw/bin/pkgutil -y -i gitk </code>
-  <code># /usr/sbin/pkgchk -L CSWgitk # list files</code>
+  <pre><code># pkgadd -d http://get.opencsw.org/now</code></pre>
+  <pre><code># /opt/csw/bin/pkgutil -U</code></pre>
+  <pre><code># /opt/csw/bin/pkgutil -y -i gitk </code></pre>
+  <pre><code># /usr/sbin/pkgchk -L CSWgitk # list files</code></pre>
 
   <h3>Solaris 11 Express</h3>
-  <code># pkg install developer/versioning/git</code>
+  <pre><code># pkg install developer/versioning/git</code></pre>
   <p>On Solaris 11 Express gitk is installed with Git.</p>
   
   <h3>OpenBSD</h3>
-  <code># pkg_add git</code>
+  <pre><code># pkg_add git</code></pre>
 
   <h3>Alpine</h3>
-  <code># apk add git</code>
+  <pre><code># apk add git</code></pre>
   <p>Gitk is a subpackage of git on Alphine Linux. It can be invoked with git-gitk.</p>
   
   <h3>Red Hat Enterprise Linux, Oracle Linux, CentOS, Scientific Linux, et al.</h3>
   <p>RHEL and derivatives typically ship older versions of git. You can <a href="https://www.kernel.org/pub/software/scm/git/">download a tarball</a> and build from source, or use a 3rd-party repository such as <a href="https://ius.io/">the IUS Community Project</a> to obtain a more recent version of git.</p>
 
   <h3>Slitaz</h3>
-  <code># tazpkg get-install git</code>
+  <pre><code># tazpkg get-install git</code></pre>
   <p>If you also want to install gitk click <a href="http://forum.slitaz.org/topic/gitk?bb_attachments=43156&bbat=2350">here</a> to get a tazpkg file for gitk. After installing it, run:</p>
-  <code># tarpkg install file.tarpkg</code>
+  <pre><code># tarpkg install file.tarpkg</code></pre>
   <p>Remember to replace file.tarpkg with the path to your downloaded tarpkg file.</p>
 
 </div>
