Added in note for Solaris header

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -65,7 +65,7 @@
   
   <h3>Solaris 9/10/11 (<a href="https://www.opencsw.org">OpenCSW</a>)</h3>
   <pre><code># pkgutil -i git</code></pre>
-  <p>Optionally, if you would also like to install gitk, then run the following:</p>
+  <p>Optionally, if you would also like to install gitk (on <a href="https://www.opencsw.org/packages/gitk/#:~:text=Solaris%2010%20and%2011">Solaris 9/10</a> only), then run the following:</p>
   <pre><code># pkgadd -d http://get.opencsw.org/now</code></pre>
   <pre><code># /opt/csw/bin/pkgutil -U</code></pre>
   <pre><code># /opt/csw/bin/pkgutil -y -i gitk </code></pre>
