Changed positions of versions of Fedora

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -20,8 +20,10 @@
   <pre># sudo apt install gitk</pre>
   
   <h3>Fedora</h3>
-  <pre># yum install git</pre> (up to Fedora 21)<br>
-  <pre># dnf install git</pre> (Fedora 22 and later)
+  <p>Fedora 21 and underneath:</p>
+  <pre># yum install git</pre><br>
+  <p>Fedora 22 and later:</p>
+  <pre># dnf install git</pre>
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
   <pre># sudo yum install tk</pre>
   <pre># sudo yum install gitk</pre>
