--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -90,7 +90,7 @@
   <h3>Slitaz</h3>
   <pre># tazpkg get-install git</pre>
   <p>If you also want to install gitk click <a href="http://forum.slitaz.org/topic/gitk?bb_attachments=43156&bbat=2350">here</a> to get a tazpkg file for gitk. After installing it, run:</p>
-  <pre># tarpkg install file.tarpkg</pre>
-  <p>Remember to replace file.tarpkg with the path to your downloaded tarpkg file.</p>
+  <pre># tazpkg install file.tazpkg</pre>
+  <p>Remember to replace file.tazpkg with the path to your downloaded tazpkg file.</p>
 
 </div>
