change style to almost respansive

--- a/public/assets/errors.css
+++ b/public/assets/errors.css
@@ -28,6 +28,12 @@ $callout-color:      #e9e8e0;
 
 // @import "typography";
 
+@media (min-width: 480px) {
+  img{
+    width: 100%;
+  }
+}
+
 p {
   margin: 0 0 $base-line-height / 2;
   font-size: $base-font-size;
@@ -406,8 +412,28 @@ body {
 }
 
 .inner {
-  width: 500px;
+  /* width: 500px; */
+  width: 100%;
+  min-width: 470px
   margin: 70px auto;
+  text-align: center;
+  align-content: center;
+  /* width: max-content; */
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  height: max-content;
+  margin: auto;
+  position: absolute;
+}
+
+html{
+  max-height: 100%
+}
+
+img{
+  /* width: 100%; */
 }
 
 p {
@@ -437,3 +463,4 @@ nav ul {
     margin-left: 15px;
   }
 }
+
