--- a/app/views/downloads/download_mac.html.erb
+++ b/app/views/downloads/download_mac.html.erb
@@ -34,7 +34,7 @@
     
   <h3>Installing git-gui</h3>
   <p>If you would like to install <a href="https://git-scm.com/docs/git-gui/">git-gui</a> and <a href="https://git-scm.com/docs/gitk/">gitk</a>,
-  git's commit GUI and interactive history browser, you can do so using <a href="https://bre.sh/">homebrew</a><br>
+  git's commit GUI and interactive history browser, you can do so using <a href="https://brew.sh/">homebrew</a><br>
 
   <code>$ brew install git-gui</code></p>
   
